<resources>
    <string name="app_name">Task_abon</string>
    
    <string-array name="reason_fields">
        <item name="відсутній абонент"/>
        <item name="абонент не відчинив"/>
        <item name="відсутній лічильник"/>
        <item name="Внесено помилково"/>
        <item name="Заборгованість оплачено"/>
        <item name="Абонент відмовився від підпису"/>
    </string-array>

    <string-array name="status_fields">
        <item>Виконано</item>
        <item>Не виконано</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_password_hint">Введіть пароль</string>
    <string name="noTask">Схоже, завдань немає…</string>
    <string name="login_hint">Введіть пароль</string>
    <string name="contr_pokaz">Показ. контр:</string>
    <string name="enter_data_hint">Введіть дані</string>
    <string name="clear_field_btn">Очистити поле</string>
    <string name="add_filter">Додати умову</string>
    <string name="find">Пошук</string>
    <string name="not_done">Не виконано</string>
    <string name="id_task">Id завдання:</string>
    <string name="ended">Завершено:</string>
    <string name="previous">Попередній</string>
    <string name="next">Наступний</string>
    <string name="date">Дата</string>
    <string name="status">Статус</string>
    <string name="source">Джерело</string>
    <string name="phone_number">Номер тел.</string>
    <string name="note">Записи</string>
    <string name="new_phone_number">Новий номер телефону</string>
    <string name="details_to">Характеристики ТО</string>
    <string name="zone">Зона</string>
    <string name="old">Старі</string>
    <string name="use">Витрата</string>
    <string name="new_index">Нові</string>
    <string name="enter">Ввести</string>
    <string name="info">Інфо</string>
    <string name="add">Додати</string>
    <string name="about">Про програму</string>
    <string name="save">Зберегти</string>
    <string name="upload_task">Вигрузити завдання</string>
    <string name="delete_task">Видалити завдання</string>
    <string name="cancel">Відміна</string>
    <string name="yes">Так</string>
    <string name="no">Ні</string>
    <string name="app_info">Інформація про додаток</string>
    <string name="add_task">Додати завдання</string>
    <string name="marks">Позначки</string>
    <string name="pillar_template">%1$s Опора: %2$s</string>
    <string name="counter_template">"%1$s   "</string>
    <string name="account_template">"%1$s   "</string>
    <string name="account_counter_template">%1$s%2$s</string>
    <string name="status_done">Виконано: %1$d/%2$d</string>
    <string name="info_template">Id завдання: %1$s , Записи: %2$s, Дата створення: %3$s, Юр.особи: %4$s</string>
    <string name="diff_template">Расход/nСредн: %1$s</string>
    <string name="ok">Ок</string>
    <string name="no_needed_icons">Без позначок</string>
    <string name="contr_template">Показ. контр: %1$s</string>
    <string name="reset_filter">Скинути фільтр</string>
    <string name="explain_permission_text">Базовий функціонал оснований на цих дозволах</string>
    <string name="forward_to_settings_text">Вам потрібно дати необхідні дозволи в налаштуваннях вручну</string>
    <string name="denied_permissions_text">"Ці дозволи відхилені: "</string>
    <string name="feature_spinner_hint">Можливий вибір декількох пунктів:</string>
    <string name="remove_all">Очистити все</string>
    <string name="permission_accepted">Дозвіл дано</string>
    <string name="app_info_text">Додаток створено для контролерів АТ ПОЛТАВАОБЛЕНЕРГО\nРозробник: Громов Євгеній, тел.510–557\nВерсія: ${BuildConfig.VERSION_NAME}</string>
</resources>