<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/find_user_root_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.finduser.FindUserFragment">
    
    <ListView
        android:id="@+id/filter_list"
        android:layout_width="match_parent"
        android:layout_height="180dp"/>

    <Spinner
        android:id="@+id/filter_spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">

        <EditText
            android:id="@+id/edit_filter_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.85"
            android:hint="@string/enter_data_hint"
            android:inputType="text"/>

        <Spinner
            android:id="@+id/exist_items_spinner"
            android:spinnerMode="dialog"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:paddingEnd="200dp"
            android:background="@drawable/ic_baseline_view_agenda_24" />

    </LinearLayout>

    <Button
        android:id="@+id/clear_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/clear_field_btn" />

    <Button
        android:id="@+id/add_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/add_filter" />

    <Button
        android:id="@+id/do_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/find"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>